sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value L
  L = getNombreValeurs()
  ^AlgGnomeSort:4: error: not found: value i
  i=1
  ^AlgGnomeSort:5: error: not found: value i
  while (i != L) {
         ^AlgGnomeSort:5: error: not found: value L
  while (i != L) {
              ^AlgGnomeSort:6: error: not found: value i
    if (getValeur(i)> getValeur(i+1) && i!=0) {
                  ^AlgGnomeSort:6: error: not found: value i
    if (getValeur(i)> getValeur(i+1) && i!=0) {
                                ^AlgGnomeSort:6: error: not found: value i
    if (getValeur(i)> getValeur(i+1) && i!=0) {
                                        ^AlgGnomeSort:7: error: not found: value i
    	echange(i, i+1)
                ^AlgGnomeSort:7: error: not found: value i
    	echange(i, i+1)
                   ^AlgGnomeSort:8: error: not found: value i
      i = i-1 
      ^AlgGnomeSort:10: error: not found: value i
    else if (getValeur(i)< getValeur(i+1) && i!=0) {
                       ^AlgGnomeSort:10: error: not found: value i
    else if (getValeur(i)< getValeur(i+1) && i!=0) {
                                     ^AlgGnomeSort:10: error: not found: value i
    else if (getValeur(i)< getValeur(i+1) && i!=0) {
                                             ^AlgGnomeSort:11: error: not found: value i
      i=i+1
      ^