sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  L = getNombreValeurs()
  i=1
  while (i != L) {
    if (getValeur(i)> getValeur(i+1) && i!=0) {
    	echange(i, i+1)
      i = i-1 
  	}
    else if (getValeur(i)< getValeur(i+1) && i!=0) {
      i=i+1
    }
  
  }
  
  
}